<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ellenomoto.proj2.MainActivity"
    android:background="#ffffff">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/represent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#ff0000"
        android:textSize="40dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prompt"
        android:text="@string/zipcode"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/entry"
        android:editable="true"
        android:hint="@string/entry"
        android:textSize="30dp"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/prompt"
        android:layout_toStartOf="@+id/zipcode_button"
        android:textColorHint="#76ee0000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prompt2"
        android:text="@string/or"
        android:textSize="30dp"
        android:layout_below="@+id/entry"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_location_button"
        android:id="@+id/current_location_button"
        android:textSize="30dp"
        android:layout_below="@+id/prompt2"
        android:layout_alignParentStart="true"
        android:textColor="#000dff" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zipcode_button"
        android:id="@+id/zipcode_button"
        android:layout_marginLeft="10dp"
        android:layout_above="@+id/prompt2"
        android:layout_alignEnd="@+id/title" />
</RelativeLayout>
